<resources>
    <string name="app_name">Weather BY</string>
    <string name="app_version" translatable="false">v. 1.3.5</string>
    <string name="support_email" translatable="false">ivladimir_n@mail.ru</string>

    <string name="activity_name_settings">Settings</string>
    <string name="activity_name_temperature">History</string>
    <string name="pogoda">Weather</string>
    <string name="temperature" translatable="false">°C</string>
    <string name="weather_conditions">Sunny</string>
    <string name="wind_speed_m_s"> m/s</string>
    <string name="direction_wind">N/A</string>
    <string name="humidity">%</string>
    <string name="pressure_mmHg">mmHg.</string>

    <string name="wind_indication">Wind</string>
    <string name="humidity_indication">Humidity</string>
    <string name="pressure_indication">Pressure</string>
    <string name="dark_theme">Dark background</string>
    <string name="on_the_map">On the map</string>
    <string name="ok" translatable="false">OK</string>
    <string name="delete">Delete</string>
    <string name="link">Link</string>
    <string name="screenshot">Screenshot</string>
    <string name="location">en</string>
    <string name="choose_city">City ​​search</string>

    <string name="nav_header_title">Enter your name</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="place_not_found">Sorry, no weather data found.</string>

    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloud" translatable="false">&#xf041;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_day_cloudy" translatable="false">&#xf002;</string>
    <string name="weather_night_cloudy" translatable="false">&#xf086;</string>
    <string name="weather_sun_clouds_rain" translatable="false">&#xf008;</string>
    <string name="weather_night_clouds_rain" translatable="false">&#xf036;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_showers" translatable="false">&#xf01a;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>

    <string name="temperature_icon" translatable="false">&#xf055;</string>
    <string name="humidity_icon" translatable="false">&#xf07a;</string>
    <string name="pressure_icon" translatable="false">&#xf079;</string>
    <string name="wind_icon" translatable="false">&#xf050;</string>


    <!--<string name="icon01d" translatable="false">&#xf00d;</string>-->
    <!--<string name="icon01n" translatable="false">&#xf02e;</string>-->
    <!--<string name="icon50d" translatable="false">&#xf014;</string>-->
    <!--<string name="icon03d" translatable="false">&#xf041;</string>-->
    <!--<string name="icon03n" translatable="false">&#xf041;</string>-->
    <!--<string name="icon04d" translatable="false">&#xf013;</string>-->
    <!--<string name="icon04n" translatable="false">&#xf013;</string>-->
    <!--<string name="icon02d" translatable="false">&#xf002;</string>-->
    <!--<string name="icon02n" translatable="false">&#xf086;</string>-->
    <!--<string name="icon10d" translatable="false">&#xf019;</string>-->
    <!--<string name="icon13d" translatable="false">&#xf01b;</string>-->
    <!--<string name="icon11d" translatable="false">&#xf01e;</string>-->
    <!--<string name="icon09d" translatable="false">&#xf01c;</string>-->


    <string name="north_wind_icon" translatable="false">&#xf044;</string>
    <string name="south_wind_icon" translatable="false">&#xf058;</string>
    <string name="east_wind_icon" translatable="false">&#xf048;</string>
    <string name="west_wind_icon" translatable="false">&#xf04d;</string>
    <string name="north_east_wind_icon" translatable="false">&#xf043;</string>
    <string name="south_west_wind_icon" translatable="false">&#xf057;</string>
    <string name="north_west_wind_icon" translatable="false">&#xf088;</string>
    <string name="south_east_wind_icon" translatable="false">&#xf087;</string>

    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="city_name">City</string>
    <string name="sunrise_sunset">Sunrise and sunset</string>
    <string name="developer_name" translatable="false">by Vladimir Nehvedovich</string>
    <string name="tools">Tools</string>
    <string name="additionally">Additionally</string>
    <string name="about_the_app">About the app</string>
    <string name="feedback_form">Feedback form</string>
    <string name="message_subject">Application \'Погода BY\'</string>

    <string name="problem_message">Describe your problem and add screenshot.</string>
    <string name="more_info_text">Additional data to display:</string>
    <string name="avatar">Сhange avatar</string>
    <string name="send_mail_title">Send mail…</string>
    <string name="application_absent">Application does not exist</string>
    <string name="nav_change_name">Change name</string>
    <string name="current_temperature">Current temperature</string>
    <string name="last_update">Last update:</string>
    <string name="error">Error</string>
    <string name="history">History</string>
    <string name="no_items">No items</string>
    <string name="clear_the_history">Clear the history</string>
    <string name="null_data" translatable="false">-</string>
    <string name="error_internet_connection">No internet connection!</string>
    <string name="error_city_not_found">Sorry, city not found</string>
    <string name="error_internet_text">Check your internet connection and try again.</string>
    <string name="your_location">(Your location)</string>
    <string name="my_location">My location…</string>
    <string name="no_view_app">There are no application!</string>
    <string name="confirmDelete">You really go remove %s?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="actionAddCity">Add city</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="add">Add</string>
    <string name="hint_city_example">Minsk, BY</string>
    <string name="enter_city_message">Enter the name of the city in the format: \'Minsk\' or \'Minsk, BY\'</string>
    <string name="incorrect_city_name">Incorrect city name!</string>
    <string name="minimalistic_Icons">Minimalistic Icons</string>
    <string name="openWeatherMapText">Data provided by OpenWeatherMap</string>
    <string name="mapInfoText">Displaying weather on a map - Yandex Technology</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="share_app">Share app</string>

</resources>
