<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forecastWeatherDaily"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone"
    tools:context=".screens.screens.SecondActivity"
    tools:visibility="visible">

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/translucent"
        app:cardCornerRadius="7dp"
        app:cardElevation="0dp">

        <LinearLayout
            style="@style/LinearForecastStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/day_of_week1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/day" />

                <TextView
                    android:id="@+id/weather_daily_icon1"
                    style="@style/LinearForecastDailyStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="20 ℃   ic    2,5 m/s" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/night" />

                <TextView
                    android:id="@+id/weather_night_icon1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:textSize="18sp"
                    tools:text="10 ℃   ic    2,5 m/s" />
            </LinearLayout>

        </LinearLayout>
    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/translucent"
        app:cardCornerRadius="7dp"
        app:cardElevation="0dp">

        <LinearLayout
            style="@style/LinearForecastStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/day_of_week2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="dataDay" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/day" />

                <TextView
                    android:id="@+id/weather_daily_icon2"
                    style="@style/LinearForecastDailyStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="20 ℃   ic    2,5 m/s" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/night" />

                <TextView
                    android:id="@+id/weather_night_icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:textSize="18sp"
                    tools:text="10 ℃   ic    2,5 m/s" />
            </LinearLayout>

        </LinearLayout>
    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/translucent"
        app:cardCornerRadius="7dp"
        app:cardElevation="0dp">

        <LinearLayout
            style="@style/LinearForecastStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/day_of_week3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="dataDay" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/day" />

                <TextView
                    android:id="@+id/weather_daily_icon3"
                    style="@style/LinearForecastDailyStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="20 ℃   ic    2,5 m/s" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/night" />

                <TextView
                    android:id="@+id/weather_night_icon3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:textSize="18sp"
                    tools:text="10 ℃   ic    2,5 m/s" />
            </LinearLayout>

        </LinearLayout>
    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/translucent"
        app:cardCornerRadius="7dp"
        app:cardElevation="0dp">

        <LinearLayout
            style="@style/LinearForecastStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/day_of_week4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="dataDay" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/day" />

                <TextView
                    android:id="@+id/weather_daily_icon4"
                    style="@style/LinearForecastDailyStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="20 ℃   ic    2,5 m/s" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/night" />

                <TextView
                    android:id="@+id/weather_night_icon4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:textSize="18sp"
                    tools:text="10 ℃   ic    2,5 m/s" />
            </LinearLayout>

        </LinearLayout>
    </android.support.design.card.MaterialCardView>
</LinearLayout>